--- a/package.json
+++ b/package.json
@@ -99,6 +99,7 @@
     "eslint-plugin-react-hooks": "^4.1.0",
     "form-data": "^3.0.0",
     "gatsby-plugin-typegen": "^2.2.4",
+    "hast-util-to-mdast9": "npm:hast-util-to-mdast@9.0.0",
     "hast-util-to-string": "^1.0.4",
     "hastscript": "^6.0.0",
     "he": "^1.2.0",
@@ -123,8 +124,11 @@
     "pg": "^8.11.3",
     "postinstall-postinstall": "^2.1.0",
     "prettier": "2.0.5",
+    "rehype-parse9": "npm:rehype-parse@9.0.0",
+    "rehype-remark10": "npm:rehype-remark@10.0.0",
     "rehype-stringify": "^8.0.0",
     "remark-frontmatter": "^2.0.0",
+    "remark-frontmatter5": "npm:remark-frontmatter@5.0.0",
     "remark-mdx": "2.0.0-next.8",
     "remark-mdx-remove-exports": "^1.6.22",
     "remark-mdx-remove-imports": "^1.6.22",
@@ -133,6 +137,7 @@
     "remark-parse": "8.0.3",
     "remark-parse10": "npm:remark-parse@^10.0.1",
     "remark-stringify": "^8.1.1",
+    "remark-stringify10": "npm:remark-stringify@10.0.2",
     "selenium-webdriver": "^4.12.0",
     "simple-git": "^3.16.0",
     "source-map-loader": "^3.0.1",
@@ -144,6 +149,7 @@
     "typescript": "^4.5.5",
     "unified": "^9.2.0",
     "unified10": "npm:unified@^10.1.2",
+    "unified11": "npm:unified@^11.0.4",
     "unist-builder": "^2.0.3",
     "unist-util-is": "^4.0.2",
     "unist-util-select": "^3.0.1",
@@ -182,7 +188,7 @@
     "db:clean": "./scripts/actions/translation_workflow/testing/cleanup.sh",
     "db:start": "docker-compose --file scripts/actions/translation_workflow/testing/docker-compose.yml up --build",
     "debug": "yarn develop --inspect-brk",
-    "deserialize": "./scripts/serde.js deserialize",
+    "deserialize": "./scripts/serde.mjs deserialize",
     "develop": "gatsby develop",
     "docs-freshness": "./scripts/docsAndLastDateEdited.mjs",
     "extract-i18n": "i18next",
@@ -201,7 +207,7 @@
     "prepare": "husky install",
     "reboot": "rm -rf node_modules && yarn && yarn clean && yarn start",
     "remove-unused-images": " node scripts/removeUnusedImages.js",
-    "serialize": "./scripts/serde.js serialize",
+    "serialize": "./scripts/serde.mjs serialize",
     "serve": "gatsby serve",
     "start:full": "NODE_OPTIONS='--max-old-space-size=5120' yarn develop",
     "start": "NODE_OPTIONS='--max-old-space-size=5120' BUILD_LANG=en yarn develop",
